--- a/app/www/index.html
+++ b/app/www/index.html
@@ -24,10 +24,30 @@
   <body ng-app="starter">
 
     <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+      <ion-header-bar class="bar-positive">
+        <h1 class="title">UCL TB</h1>
       </ion-header-bar>
-      <ion-content>
+				<div class="padding bar bar-subheader">
+					<h2>Main Menu</h2>
+				</div>
+      <ion-content class="padding has-subheader">
+				<div class="card">
+					<div class="item">
+						General Information
+					</div>
+					<div class="item">
+						Clinical Service
+					</div>
+					<div class="item">
+						Quiz
+					</div>
+					<div class="item">
+						Research
+					</div>
+					<div class="item">
+						Feedback
+					</div>
+				</div>
       </ion-content>
     </ion-pane>
   </body>
