--- a/app/www/index.html
+++ b/app/www/index.html
@@ -23,9 +23,9 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="starter">
-		<ion-header-bar class="bar-positive">
-			<h1 class="title">UCL TB</h1>
-		</ion-header-bar>
+		<ion-nav-bar class="bar-positive">
+			<ion-nav-back-button></ion-nav-back-button>
+		</ion-nav-bar>
 		<ion-nav-view></ion-nav-view>
   </body>
 </html>
