--- a/app/platforms/ios/www/index.html
+++ b/app/platforms/ios/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+		<link href="css/animate.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -22,9 +23,9 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="starter" class="platform-ios platform-cordova platform-webview">
-		<ion-header-bar class="bar-positive">
-			<h1 class="title">UCL TB</h1>
-		</ion-header-bar>
+		<ion-nav-bar class="bar-positive">
+			<ion-nav-back-button></ion-nav-back-button>
+		</ion-nav-bar>
 		<ion-nav-view></ion-nav-view>
   </body>
 </html>
