--- a/app/www/pages/staff.html
+++ b/app/www/pages/staff.html
@@ -1,4 +1,10 @@
 <ion-view view-title="Staff">
-	<ion-content class="has-header">
+	<div class="bar has-header item-input-inset bar-light">
+		<label class="item-input-wrapper">
+			<i class="icon ion-search placeholder-icon"></i>
+			<input type="search" placeholder="Search">
+		</label>
+	</div>
+	<ion-content>
 	</ion-content>
 </ion-view>
