Using local .json file, tested search bar and layout of Staff page.

--- a/app/www/pages/staff.html
+++ b/app/www/pages/staff.html
@@ -6,8 +6,11 @@
 		</label>
 	</div>
 	<ion-content class="has-subheader">
-		<ion-item ng-repeat='item in stafflist | filter: query'>
-
+		<ion-item class="item-thumbnail-left" ng-repeat='item in stafflist | filter: query'>
+			<img src="http://placehold.it/100x100">
+			<h2>{{ item.name }}</h2>
+			<h3>{{ item.role }}</h2>
+			<p>Lorem ipsum dolor sit amet, odio id ducimus hendrerit ut sed curabitur. Auctor eu neque, elementum in, ante rutrum lorem et ligula vestibulum. Libero nulla quisque sociis, sollicitudin risus odio, voluptas hendrerit. Suscipit pede ultrices faucibus vehicula nunc natoque, odio felis est suscipit pretium leo. Elit metus consequat at vitae magna laoreet, libero sed curae, vitae ipsum maecenas semper lectus interdum. Suspendisse nibh morbi fermentum consequat lectus, vel integer hac amet, urna est arcu donec mi, eu in. Porta enim felis, luctus vulputate ante duis, eu integer ut ipsum donec pretium egestas, nullam quisque ut. Suspendisse fermentum suscipit minima et vehicula, magna phasellus sapien id quisque mauris scelerisque, leo wisi sed sed libero litora, et placerat vulputate dictum velit velit, porta dictum felis sed nulla faucibus. Sollicitudin lacus eget quis mattis sed. Nulla in iaculis pede. Tellus libero natoque, sed sed ut porta nascetur quis, tempus justo, lacus accumsan et tempus, aliquet imperdiet rhoncus eu. Dolorem veniam purus porttitor urna tincidunt enim, molestie magnis class eget etiam felis, et senectus duis malesuada.</p>
 		</ion-item>
 	</ion-content>
 </ion-view>
