changed name of pages as requested by client

--- a/app/www/pages/feedback.html
+++ b/app/www/pages/feedback.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Feedback">
+<ion-view view-title="Give Us Feedback">
 	<ion-content class="has-header">
 	</ion-content>
 </ion-view>
