--- a/app/www/pages/research.html
+++ b/app/www/pages/research.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Research">
+<ion-view view-title="About Our Research">
 	<ion-content class="has-header">
 	</ion-content>
 </ion-view>
