--- a/app/www/pages/clinserv.html
+++ b/app/www/pages/clinserv.html
@@ -1,5 +1,5 @@
 <!-- <div class="padding bar"></div> -->
-<ion-view view-title="Clinical Services">
+<ion-view view-title="About Our Service">
 	<ion-content class="has-header">
 		<ion-list>
 			<ion-item class="card" ng-repeat="item in menuitems" href="#/{{ item.filename }}">
