--- a/app/www/pages/geninfo.html
+++ b/app/www/pages/geninfo.html
@@ -1,4 +1,4 @@
-<ion-view view-title="General Information">
+<ion-view view-title="About TB">
 	<ion-content class="has-header">
 	</ion-content>
 </ion-view>
