--- a/app/www/pages/quiz.html
+++ b/app/www/pages/quiz.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Quiz">
+<ion-view view-title="Test Your Knowledge">
 	<ion-content class="has-header">
 	</ion-content>
 </ion-view>
