--- a/app/www/pages/staff.html
+++ b/app/www/pages/staff.html
@@ -7,7 +7,9 @@
 	</div>
 	<ion-content class="has-subheader">
 		<ion-list>
-			<ion-item class="item-thumbnail-left" ng-repeat='item in stafflist | filter: query'>
+			<ion-item class="item-thumbnail-left"
+				ng-repeat='item in stafflist | filter: query'
+				href="#/staff/{{ item.ref }}">
 				<img src="http://placehold.it/100x100">
 				<h2>{{ item.name }}</h2>
 				<h3>{{ item.role }}</h2>
