Started creating front end design for quiz

--- a/app/www/pages/quiz.html
+++ b/app/www/pages/quiz.html
@@ -1,4 +1,9 @@
 <ion-view view-title="Test Your Knowledge">
-	<ion-content class="has-header">
+	<ion-content>
+		<a href="#/question1">
+			<button class="button button-block button-balanced">
+				Ready to start the quiz
+			</button>
+		</a>
 	</ion-content>
 </ion-view>
