--- a/app/www/pages/feedback.html
+++ b/app/www/pages/feedback.html
@@ -1,4 +1,15 @@
 <ion-view view-title="Give Us Feedback">
 	<ion-content class="has-header">
+	<p align="center"><strong>Feedback is anonymous</strong></p>
+	</br>
+	
+	<div class="list">
+		<label class="item item-input">
+			<input type="text" placeholder="Subject">
+		</label>
+		<label class="item item-input">
+			<textarea placeholder="Comments"></textarea>
+		</label>
+	</div>
 	</ion-content>
 </ion-view>
