--- a/app/www/pages/research.html
+++ b/app/www/pages/research.html
@@ -4,6 +4,9 @@
 		<ion-list>
 			<ion-item class="card" ng-repeat="item in menuitems" href="#/{{ item.filename }}">
 				{{ item.name }}
+			</ion-item>
+		</ion-list>	
+		
 	</ion-content>
 </ion-view>
 
