--- a/app/www/pages/geninfo.html
+++ b/app/www/pages/geninfo.html
@@ -1,9 +1,11 @@
 <ion-view view-title="About TB">
 	<ion-content class="has-header">
-	     <h2><u>What is Tuberculosis?</u></h2>
+	     <h2 align="center"><u>What is Tuberculosis?</u></h2>
 	     <p>Tuberculosis (TB) is an infection caused by the bacteria Mycobacterium
             tuberculosis, which most commonly affects the lungs. It is spread from
             person to person by inhaling tiny droplets from the coughs of people with
             the active disease in their lungs.</p>
+			
 	</ion-content>
+	
 </ion-view>
