--- a/app/www/pages/clinserv.html
+++ b/app/www/pages/clinserv.html
@@ -2,7 +2,8 @@
 <ion-view view-title="About Our Service">
 	<ion-content class="has-header">
 		<ion-list>
-			<ion-item class="card" ng-repeat="item in menuitems" href="#/{{ item.filename }}">
+			<ion-item class="card" ng-repeat="item in menuitems"
+				href="#/{{ item.filename }}">
 				{{ item.name }}
 	</ion-content>
 </ion-view>
