--- a/app/www/pages/staff.html
+++ b/app/www/pages/staff.html
@@ -2,6 +2,7 @@
 	<div class="bar has-header item-input-inset bar-light">
 		<label class="item-input-wrapper">
 			<i class="icon ion-search placeholder-icon"></i>
+			<!-- Search bar -->
 			<input type="search" ng-model="query" placeholder="Search">
 		</label>
 	</div>
@@ -9,7 +10,7 @@
 		<ion-list>
 			<ion-item class="item-thumbnail-left"
 				ng-repeat='item in stafflist | filter: query'
-				href="#/{{ item.ref }}">
+				ui-sref="detail({ detail: item.ref })">
 				<img src="http://placehold.it/100x100">
 				<h2>{{ item.name }}</h2>
 				<h3>{{ item.role }}</h2>
