--- a/app/platforms/ios/www/index.html
+++ b/app/platforms/ios/www/index.html
@@ -21,6 +21,8 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+		<script src="js/controllers.js"></script>
+
   </head>
   <body ng-app="starter" class="platform-ios platform-cordova platform-webview">
 		<ion-nav-bar class="bar-positive">
