--- a/app/www/pages/research.html
+++ b/app/www/pages/research.html
@@ -2,8 +2,8 @@
 <ion-view view-title="About Our Research">
 	<ion-content class="has-header">
 		<ion-list>
-			<ion-item class="card" ng-repeat="item in menuitems" href="#/{{ item.filename }}">
+			<ion-item class="card" ng-repeat="item in projects"
+				ui-sref="project({ proj: item })">
 				{{ item.name }}
 	</ion-content>
 </ion-view>
-
