--- a/app/www/pages/staff.html
+++ b/app/www/pages/staff.html
@@ -9,7 +9,7 @@
 		<ion-list>
 			<ion-item class="item-thumbnail-left"
 				ng-repeat='item in stafflist | filter: query'
-				href="#/{{ item.ref }}">
+				ui-sref="detail({ detail: item.ref })">
 				<img src="http://placehold.it/100x100">
 				<h2>{{ item.name }}</h2>
 				<h3>{{ item.role }}</h2>
