--- a/app/www/index.html
+++ b/app/www/index.html
@@ -21,7 +21,16 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-		<script src="js/controllers.js"></script>
+
+		<!-- Controllers -->
+		<script src="js/controllers/clinserv.js"></script>
+		<script src="js/controllers/feedback.js"></script>
+		<script src="js/controllers/geninfo.js"></script>
+		<script src="js/controllers/mainmenu.js"></script>
+		<script src="js/controllers/quiz.js"></script>
+		<script src="js/controllers/research.js"></script>
+		<script src="js/controllers/schedule.js"></script>
+		<script src="js/controllers/staff.js"></script>
 
 		<!-- Firebase -->
 		<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
