--- a/app/www/index.html
+++ b/app/www/index.html
@@ -39,7 +39,7 @@
 		<script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
 
   </head>
-  <body ng-app="starter">
+  <body ng-app="app">
 		<ion-nav-bar class="bar-positive">
 			<ion-nav-back-button></ion-nav-back-button>
 		</ion-nav-bar>
