--- a/app/www/index.html
+++ b/app/www/index.html
@@ -52,25 +52,25 @@
             </ion-nav-back-button>
 		</ion-nav-bar>
 		<ion-nav-view>
-		
+
         <ion-view>
             <ion-nav-buttons side="primary">
                 <button class="button" ng-click="doSomething()">
 				</button>
 		    </ion-nav-buttons>
-			
+
         <ion-content>
-		
+
         </ion-content>
 		</ion-view>
 		</ion-nav-view>
-		
-		<div class="tabs tabs-icon-left">
+
+		<!-- <div class="tabs tabs-icon-left">
 			<a class="tab-item" href="#/mainmenu">
 				<i class="icon ion-home"></i>
 					Main Menu
 			</a>
-			
+
 			<a class="tab-item" href="#/geninfo">
 				<i class="icon ion-star"></i>
 					About TB
@@ -79,9 +79,7 @@
 				<i class="icon ion-gear-a"></i>
 					Feedback
 			</a>
-		</a></a></div>
-		
+		</a></a></div> -->
+
   </body>
 </html>
-
-
