--- a/app/www/index.html
+++ b/app/www/index.html
@@ -47,23 +47,9 @@
   </head>
   <body ng-app="app">
 		<ion-nav-bar class="bar-positive">
-			<ion-nav-back-button class="button-clear">
-                  <i class="ion-arrow-left-c"></i> Back
-            </ion-nav-back-button>
+			<ion-nav-back-button class="button-clear"></ion-nav-back-button>
 		</ion-nav-bar>
-		<ion-nav-view>
-
-        <ion-view>
-            <ion-nav-buttons side="primary">
-                <button class="button" ng-click="doSomething()">
-				</button>
-		    </ion-nav-buttons>
-
-        <ion-content>
-
-        </ion-content>
-		</ion-view>
-		</ion-nav-view>
+		<ion-nav-view></ion-nav-view>
 
 		<!-- <div class="tabs tabs-icon-left">
 			<a class="tab-item" href="#/mainmenu">
