--- a/app/platforms/android/assets/www/index.html
+++ b/app/platforms/android/assets/www/index.html
@@ -16,24 +16,52 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-		<!-- Firebase -->
-		<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
-
-		<!-- AngularFire -->
-		<script src="https://cdn.firebase.com/libs/angularfire/1.1.4/angularfire.min.js"></script>
-
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
-		<script src="js/controllers.js"></script>
+
+		<!-- Controllers -->
+		<script src="js/controllers/clinserv.js"></script>
+		<script src="js/controllers/feedback.js"></script>
+		<script src="js/controllers/geninfo.js"></script>
+		<script src="js/controllers/mainmenu.js"></script>
+		<script src="js/controllers/quiz.js"></script>
+		<script src="js/controllers/research.js"></script>
+		<script src="js/controllers/schedule.js"></script>
+		<script src="js/controllers/staff.js"></script>
+
+		<!-- Firebase -->
+		<script src="js/firebase.js"></script>
+
+		<!-- AngularFire -->
+		<script src="js/angularfire.min.js"></script>
 
   </head>
-  <body ng-app="starter" class="platform-android platform-cordova platform-webview">
+  <body ng-app="app" class="platform-android platform-cordova platform-webview">
 		<ion-nav-bar class="bar-positive">
 			<ion-nav-back-button></ion-nav-back-button>
 		</ion-nav-bar>
 		<ion-nav-view></ion-nav-view>
+
+		<!-- <div class="tabs tabs-icon-left">
+			<a class="tab-item" href="#/mainmenu">
+				<i class="icon ion-home"></i>
+					Main Menu
+			</a>
+
+			<a class="tab-item" href="#/geninfo">
+				<i class="icon ion-star"></i>
+					About TB
+			<a>
+			<a class="tab-item" href="#/feedback">
+				<i class="icon ion-gear-a"></i>
+					Feedback
+			</a>
+		</a></a></div> -->
+
   </body>
 </html>
