--- a/app/www/index.html
+++ b/app/www/index.html
@@ -7,23 +7,19 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-	<link href="css/animate.css" rel="stylesheet">
+		<link href="css/animate.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
-
-	<!-- Firebase -->
-<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
-
-<!-- AngularFire -->
-<script src="https://cdn.firebase.com/libs/angularfire/1.1.4/angularfire.min.js"></script>
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+
+
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -39,15 +35,15 @@
 		<script src="js/controllers/staff.js"></script>
 
 		<!-- Firebase -->
-		<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+		<script src="js/firebase.js"></script>
 
 		<!-- AngularFire -->
-		<script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
+		<script src="js/angularfire.min.js"></script>
 
   </head>
   <body ng-app="app">
 		<ion-nav-bar class="bar-positive">
-			<ion-nav-back-button class="button-clear"></ion-nav-back-button>
+			<ion-nav-back-button></ion-nav-back-button>
 		</ion-nav-bar>
 		<ion-nav-view></ion-nav-view>
 
