added submit button to feedback page.

--- a/app/www/pages/feedback.html
+++ b/app/www/pages/feedback.html
@@ -11,5 +11,13 @@
 			<textarea placeholder="Comments"></textarea>
 		</label>
 	</div>
+	
+	<br/>
+	
+	<a href="#/mainmenu" style="text-decoration: none;">
+		<button class="button button-block button-balanced">
+			Submit
+		</button>
+	</a>	
 	</ion-content>
 </ion-view>
