I removed hyperlink underlining

--- a/app/www/pages/quiz.html
+++ b/app/www/pages/quiz.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Test Your Knowledge">
 	<ion-content>
-		<a href="#/question1">
+		<a href="#/mainmenu" style="text-decoration: none;">
 			<button class="button button-block button-balanced">
 				Ready to start the quiz
 			</button>
