Change in tile to participate page

--- a/app/www/pages/participate.html
+++ b/app/www/pages/participate.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Contact detailsk">
+<ion-view view-title="Contact details">
 	<ion-content class="has-header">
 	<br/>
 	<p align="center"><strong>Please provide contact details for participation</strong></p>
