change in title of faq pages

--- a/app/www/pages/faq.html
+++ b/app/www/pages/faq.html
@@ -1,5 +1,5 @@
 <!-- <div class="padding bar"></div> -->
-<ion-view view-title="Quiz">
+<ion-view view-title="FAQ">
 	<ion-content class="has-header">
 	<p align="center"><b>Below is a list of frequently asked question</b></p>
 		<ion-list>
