adjustment made to faq page

--- a/app/www/pages/faq.html
+++ b/app/www/pages/faq.html
@@ -1,7 +1,7 @@
 <!-- <div class="padding bar"></div> -->
 <ion-view view-title="FAQ">
 	<ion-content class="has-header">
-	<p align="center"><b>Below is a list of frequently asked question</b></p>
+	<p align="center"><b>Below is a list of frequently asked questions</b></p>
 		<ion-list>
 			<ion-item class="card" ng-repeat="item in faq"
 				ui-sref="asked({asked: item.ref })" >
@@ -10,6 +10,5 @@
 		</ion-list>
 	</ion-content>
 </ion-view>
-
 
 
