Change in disclaimer message

--- a/app/www/pages/participate.html
+++ b/app/www/pages/participate.html
@@ -20,7 +20,8 @@
 	</div>
 	
 	<br/>
-	<p align="center"><b>Disclaimer: As per data protection laws, we will not share any of your confidential information with third parties.</b></p>	
+	<p align="center"><b>Disclaimer: 
+The information you provide here will be used exclusively to contact you in order to give you more information about participation in our research studies. Your contact details will not be passed onto any third parties and you are free to decline to participate in the research studies at any time.</b></p>	
 	<br/>
 	<a href="#/mainmenu" style="text-decoration: none;">
 		<button class="button button-block button-balanced">
