Made change to font

--- a/app/www/pages/faq.html
+++ b/app/www/pages/faq.html
@@ -5,7 +5,7 @@
 			<div class="card">
 				<div class="item item-text-wrap" ng-repeat="item in faq"
 				ui-sref="asked({asked: item.ref })" >
-					<h2 align="center"><b>{{ item.question}}</b></h2> 
+					<h2 align="center">{{ item.question}}</h2> 
 					</br>
 				</div>
 			</div>
