Added correct and incorrect answer page

--- a/app/www/pages/incorrectAns.html
+++ b/app/www/pages/incorrectAns.html
@@ -1,4 +1,11 @@
 <ion-view view-title="Incorrect Answer">
 	<ion-content class="has-header">
+		<ion-item>
+			<div class="card">
+				<div class="item item-text-wrap" >
+					<p align="center"><b>Incorrect Answer</b></p> 
+				</div>
+			</div>
+		</ion-item>
 	</ion-content>
 </ion-view>
