--- a/webapp/www/index.html
+++ b/webapp/www/index.html
@@ -20,15 +20,9 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+		<script src="js/login.js"></script>
   </head>
-  <body ng-app="app">
-
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Login</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+  <body>
+		<div ng-view></div>
   </body>
 </html>
