--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -87,8 +87,9 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
 
+        <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/login.js"></script>
-        <!-- <script src="scripts/controllers/about.js"></script> -->
+				<script src="scripts/controllers/modal.js"></script>
 
 				<script src="scripts/res/angularfire.min.js"></script>
 				<script src="scripts/res/firebase.js"></script>
