Change in topic message for faq

--- a/app/www/pages/faq.html
+++ b/app/www/pages/faq.html
@@ -1,6 +1,6 @@
 <ion-view view-title="FAQ">
 	<ion-content class="has-header">
-		<p align="center"><b>Below is a list of frequently asked questions</b></p>
+		<p align="center"><b>Please select from the list of frequently asked questions</b></p>
 		<ion-item>
 			<div class="card">
 				<div class="item item-text-wrap" ng-repeat="item in faq"
