Project placeholder added for participation input form

--- a/app/www/pages/participate.html
+++ b/app/www/pages/participate.html
@@ -6,7 +6,10 @@
 	
 	<div class="list">
 		<label class="item item-input">
-			<input type="text" placeholder="Name">
+			<input type="text" placeholder="Project Title" >
+		</label>
+		<label class="item item-input">
+			<input type="text" placeholder="Name" >
 		</label>
 		<label class="item item-input">
 			<input type="text" placeholder="Phone">
