--- a/app/www/pages/faq.html
+++ b/app/www/pages/faq.html
@@ -1,15 +1,27 @@
 <ion-view view-title="FAQ">
+	<div class="bar has-header item-input-inset bar-light">
+		<label class="item-input-wrapper">
+			<i class="icon ion-search placeholder-icon"></i>
+			<!-- Search bar -->
+			<input type="search" ng-model="query" placeholder="Search">
+		</label>
+	</div>
 	<ion-content class="has-header">
-		<p align="center"><b>Please select from the list of frequently asked questions</b></p>
+		</br>
+		</br>
+		</br>
+		<p align="center"><b>Please select from the list of frequently asked questions below</b></p>
 		<ion-item>
 			<div class="card">
-				<div class="item item-text-wrap" ng-repeat="item in faq"
-				ui-sref="asked({asked: item.ref })" >
-					<h2 align="center">{{ item.question}}</h2> 
+				<div class="item item-text-wrap" ng-repeat='item in faq | filter: query'
+				ui-sref="asked({ asked: item.ref })" >
+					<h2 align="center" style="color:red"><b>{{ item.question}}</b></h2> 
 					</br>
 				</div>
 			</div>
 		</ion-item>
 	</ion-content>
 </ion-view>
+
+
 
