--- a/app/www/pages/feedback.html
+++ b/app/www/pages/feedback.html
@@ -16,7 +16,7 @@
 	<br/>
 	
 	<a href="#/mainmenu" style="text-decoration: none;">
-		<button class="button button-block button-balanced">
+		<button class="button button-block button-positive">
 			Submit
 		</button>
 	</a>	
