--- a/app/www/pages/mainmenu.html
+++ b/app/www/pages/mainmenu.html
@@ -1,9 +1,11 @@
-<ion-view view-title="Main Menu">
+<ion-view view-title="Main Menu" class="black-background">
 	<ion-content class="has-header">
+	</br>
+	<center><img src="img/ucltbLogo.png"></center>
 		<ion-list>
 			<ion-item class="card" ng-repeat="item in menuitems"
 				href="#/{{ item.filename }}">
-				{{ item.name }}
+				<center style="color:blue">{{ item.name }}</center>
 			</ion-item>
 		</ion-list>
 		
