Changed buttons in quiz

--- a/app/www/pages/quiz.html
+++ b/app/www/pages/quiz.html
@@ -1,9 +1,12 @@
 <!-- <div class="padding bar"></div> -->
 <ion-view view-title="Quiz">
 	<ion-content class="has-header">
-		<button class="button button-block button-balanced" ui-sref="question({ question: item.ref })" >
-			Ready to Start the Quiz
+	</br>
+	<center>
+		<button class="button button-balanced" ui-sref="question({ question: item.ref })">
+			Click if you are Ready to Start the Quiz
 		</button>
+	</center>
 	</ion-content>
 </ion-view>
 
