Added pink and black bacground custom styles

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -44,10 +44,10 @@
 
   </head>
   <body ng-app="app">
-		<ion-nav-bar class="bar-positive">
+		<ion-nav-bar class="pink-background">
 			<ion-nav-back-button></ion-nav-back-button>
 		</ion-nav-bar>
-		<ion-nav-view></ion-nav-view>
+		<ion-nav-view class="black-background"></ion-nav-view>
 
 		<!-- <div class="tabs tabs-icon-left">
 			<a class="tab-item" href="#/mainmenu">
