--- a/app/www/pages/clinserv.html
+++ b/app/www/pages/clinserv.html
@@ -1,9 +1,11 @@
 <!-- <div class="padding bar"></div> -->
-<ion-view view-title="About Our Service">
+<ion-view view-title="About Our Service" class="black-background">
 	<ion-content class="has-header">
 		<ion-list>
 			<ion-item class="card" ng-repeat="item in menuitems"
 				href="#/{{ item.filename }}">
-				{{ item.name }}
+				<center style="color:blue">{{ item.name }}</center>
+			</ion-item>
+		</ion-list>
 	</ion-content>
 </ion-view>
