Added logo and blue colour text.

--- a/app/www/pages/mainmenu.html
+++ b/app/www/pages/mainmenu.html
@@ -1,11 +1,11 @@
 <ion-view view-title="Main Menu" class="black-background">
 	<ion-content class="has-header">
 	</br>
-	<center><img src="img/ucltbLogo.png"></center>
+	<center><img src="img/logo.png"></center>
 		<ion-list>
 			<ion-item class="card" ng-repeat="item in menuitems"
 				href="#/{{ item.filename }}">
-				<center style="color:blue">{{ item.name }}</center>
+				<center style="color:blue">{{ item.name }} </center>
 			</ion-item>
 		</ion-list>
 		
