Remove black background from schedule

--- a/app/www/pages/schedule.html
+++ b/app/www/pages/schedule.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Clinical Schedule" class="black-background">
+<ion-view view-title="Clinical Schedule">
 	<ion-content class="has-header">
 		<div class="card">
 			<div class="item-divider1">
