--- a/app/www/pages/feedback.html
+++ b/app/www/pages/feedback.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Give Us Feedback">
+<ion-view view-title="Feedback">
 	<ion-content class="has-header">
 	<br/>
 	<p align="center"><strong>Feedback is anonymous</strong></p>
