change in background for main menu

--- a/app/www/pages/mainmenu.html
+++ b/app/www/pages/mainmenu.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Main Menu" class="black-background">
+<ion-view view-title="Main Menu">
 	<ion-content class="has-header">
 	<img class="full-image" src="img/logo.png" height="50">
 		<ion-list>
