--- a/app/www/pages/geninfo.html
+++ b/app/www/pages/geninfo.html
@@ -1,6 +1,14 @@
 <ion-view view-title="About TB">
-	<ion-content class="has-header padding">
-	  <h2 class="padding-top" align="center"><u>What is Tuberculosis?</u></h2>
-		<p>{{ about.about }}</p>
+	<ion-content class="has-subheader">
+			<div class="list list-inset">
+				<div class="item-divider1">
+					<h2 align="center" style="color:white">About TB</h2>
+					<p align="center" style="color:white">Select topic below</p>
+				</div>
+				<div class="item" ng-repeat='item in info | filter: query' ui-sref="info({ info: item.ref })">
+					<h3 align="center" style="font-size:20px;color:blue">{{ item.title}}</h3>
+				</div>
+			</div>
 	</ion-content>
 </ion-view>
+
