--- a/app/www/index.html
+++ b/app/www/index.html
@@ -47,7 +47,7 @@
 		<ion-nav-bar class="pink-background">
 			<ion-nav-back-button></ion-nav-back-button>
 		</ion-nav-bar>
-		<ion-nav-view class="black-background"></ion-nav-view>
+		<ion-nav-view></ion-nav-view>
 
 		<!-- <div class="tabs tabs-icon-left">
 			<a class="tab-item" href="#/mainmenu">
