Changed topic head for faq page

--- a/app/www/pages/faq.html
+++ b/app/www/pages/faq.html
@@ -10,7 +10,7 @@
 		</br>
 		</br>
 		</br>
-		<p align="center"><b>Please select from the list of frequently asked questions below</b></p>
+		<p align="center"><b>Select a frequently asked question</b></p>
 		<ion-item>
 			<div class="card">
 				<div class="item item-text-wrap" ng-repeat='item in faq | filter: query'
