--- a/app/www/index.html
+++ b/app/www/index.html
@@ -33,7 +33,9 @@
 		<script src="js/controllers/research.js"></script>
 		<script src="js/controllers/schedule.js"></script>
 		<script src="js/controllers/staff.js"></script>
+		<script src="js/controllers/contact.js"></script>
 		<script src="js/controllers/faq.js"></script>
+	
 		
 
 		<!-- Firebase -->
