--- a/app/www/pages/geninfo.html
+++ b/app/www/pages/geninfo.html
@@ -1,5 +1,5 @@
 <ion-view view-title="About TB">
-	<ion-content class="has-subheader">
+	<ion-content class="has-header">
 			<div class="list list-inset">
 				<div class="item-divider1">
 					<h2 align="center" style="color:white">About TB</h2>
