--- a/app/www/pages/schedule.html
+++ b/app/www/pages/schedule.html
@@ -1,18 +1,13 @@
-<ion-view view-title="Clinical Schedule">
+<ion-view view-title="Schedule">
 	<ion-content class="has-header">
-		<div class="card">
-			<div class="item-divider1">
-				<h2 align="center" style="color:white">Opening Hours</h2>
-			</div>
-			<div class="item item-text-wrap" ng-repeat="item in schedule">
-				<h2 align="left"><b><u>{{ item.type}}</u></b></h2>
-				<h2 align="left" style="color:red">{{ item.appointment}}</h2>
-				<h2 align="left" ng-repeat="item in item.time">{{item}}</h2>
-			</div>
-		</div>
+		<ion-list>
+		<br/>
+			<p align="center"><b>Select a hospital</b></p>
+			<ion-item class="card" ng-repeat='item in schedule | filter: query'
+				ui-sref="time({ time: item.ref })">
+				<h2 style="font-size:17px;color:blue">{{ item.hospital }}</h2>
+			</ion-item> 
+		</ion-list>
 	</ion-content>
 </ion-view>
 
-
-
-		
