--- a/app/www/pages/contact.html
+++ b/app/www/pages/contact.html
@@ -1,16 +1,12 @@
 <ion-view view-title="Contact Details">
 	<ion-content class="has-header">
-		<div class="card">
-			<div class="item-divider1">
-				<h2 align="center" style="color:white">Contact Details</h2>
-			</div>
-			<div class="item item-text-wrap" ng-repeat="item in contact">
-			<p>dfs</p>
-			</div>
-		</div>
+		<ion-list>
+		<br/>
+			<p align="center"><b>Select a hospital</b></p>
+			<ion-item class="card" ng-repeat='item in contact | filter: query'
+				ui-sref="cont({ cont: item.ref })">
+				<h2 style="font-size:17px;color:blue">{{ item.hospital }}</h2>
+			</ion-item> 
+		</ion-list>
 	</ion-content>
 </ion-view>
-
-
-
-		
