--- a/app/www/pages/mainmenu.html
+++ b/app/www/pages/mainmenu.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Main Menu">
 	<ion-content class="has-header">
-	<img class="full-image" src="img/logo.png">
+	<img class="full-image" src="img/logo.png" height="60px">
 		<ion-list>
 			<ion-item class="card" ng-repeat="item in menuitems"
 				href="#/{{ item.filename }}">
