--- a/app/www/pages/clinserv.html
+++ b/app/www/pages/clinserv.html
@@ -3,7 +3,7 @@
 	<ion-content class="has-header">
 		<ion-list>
 			<ion-item class="card" ng-repeat="item in menuitems" href="#/{{ item.filename }}">
-				<h2 style="font-size:17px;color:blue">{{ item.name }}</h2>
+				<h2 style="font-size:17px;color:blue"><b>{{ item.name }}</b></h2>
 			</ion-item> 
 		</ion-list>
 	</ion-content>
