--- a/app/www/pages/schedule.html
+++ b/app/www/pages/schedule.html
@@ -5,7 +5,7 @@
 			<p align="center"><b>Select a hospital</b></p>
 			<ion-item class="card" ng-repeat='item in schedule | filter: query'
 				ui-sref="time({ time: item.ref })">
-				<h2 style="font-size:17px;color:blue">{{ item.hospital }}</h2>
+				<h2 style="font-size:17px;color:blue"><b>{{ item.hospital }}</b></h2>
 			</ion-item> 
 		</ion-list>
 	</ion-content>
