ADDED participate.js script

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -35,6 +35,7 @@
 		<script src="js/controllers/staff.js"></script>
 		<script src="js/controllers/contact.js"></script>
 		<script src="js/controllers/faq.js"></script>
+		<script src="js/controllers/participate.js"></script>
 
 		<!-- Firebase -->
 		<script src="js/firebase.js"></script>
