No longer displays comments

--- a/app/www/pages/feedback.html
+++ b/app/www/pages/feedback.html
@@ -7,11 +7,6 @@
 	</button>
 	<ion-list>
 	</br>
-	<center><h2>Comments</h2></center>
-    <ion-item ng-repeat="item in comments">
-        {{item.comment}}
-    </ion-item>
-    </ion-list>
 	</br>
 	</br>
 	</ion-content>
@@ -19,3 +14,9 @@
 
 
 
+<!--
+	<center><h2>Comments</h2></center>
+    <ion-item ng-repeat="item in comments">
+        {{item.comment}}
+    </ion-item>
+    </ion-list>-->
