analytic metric analysis in htmls

--- a/app/www/pages/feedback.html
+++ b/app/www/pages/feedback.html
@@ -2,7 +2,7 @@
 	<ion-content class="has-header">
 	<br/>
 	<p align="center"><strong>Feedback is anonymous</strong></p>
-	<button class="button button-block button-positive" ng-click="addComment()">
+	<button class="button button-block button-positive" ng-click="addComment()" ion-track-tap="Submit feedback" ion-track-data="expression">
 		Click to submit comment
 	</button>
 	<ion-list>
