--- a/app/www/pages/participate.html
+++ b/app/www/pages/participate.html
@@ -25,7 +25,7 @@
 <p align="left"><b>The information you provide here will be used exclusively to contact you in order to give you more information about participation in our research studies. Your contact details will not be passed onto any third parties and you are free to decline to participate in the research studies at any time.</b></p>	
 	<br/>
 			<div class="padding">
-				<button ng-click(createComment) class="button button-block button-positive" ng-disabled="customQuoteForm.$invalid">Submit Comment</button>
+				<button ng-click(createComment) class="button button-block button-positive" ng-disabled="customQuoteForm.$invalid" ion-track-tap="Submitted participation form" ion-track-data="expression">Submit Comment</button>
 			</div>
 		</form>
 		
