--- a/app/www/pages/quiz.html
+++ b/app/www/pages/quiz.html
@@ -3,7 +3,7 @@
 	<ion-content class="has-header">
 	</br>
 	<center>
-		<button class="button button-balanced" ui-sref="question({ question: item.ref })">
+		<button class="button button-balanced" ui-sref="question({ question: item.ref })" ion-track-tap="Selected to start quiz" ion-track-data="expression">
 			Click if you are Ready to Start the Quiz
 		</button>
 	</center>
